Fixing 100vh on mobile

--- a/_scss/_layout.scss
+++ b/_scss/_layout.scss
@@ -6,6 +6,7 @@
     width: 100%;
     overflow: hidden;
     height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     position: relative;
     display: flex;
     flex-direction: column;
