--- a/_scss/_side-menu.scss
+++ b/_scss/_side-menu.scss
@@ -13,7 +13,6 @@
 
     width: 100%;
     height: 100vh;
-    height: calc(var(--vh, 1vh) * 100);
 
     background-color: $color__black;
 }
